--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 
 [dependencies]
 crossterm = "0.28.1"
+dotenvy = "0.15.7"
 ratatui = "0.28.1"
 rzap = {path ="../rzap"}
 tokio = "1.40.0"
 tui-textarea = "0.6.1"
-
