--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 crossterm = "0.28.1"
 dotenvy = "0.15.7"
 ratatui = "0.28.1"
-rzap = {path ="../rzap"}
+rzap = "0.2.1"
 tokio = "1.40.0"
 tui-textarea = "0.6.1"
