--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -7,30 +7,21 @@ on:
       - "release"
   pull_request:
     branches: ["main"]
-
 permissions:
-  contents: write # This gives write access to create releases and upload assets
-
+  contents: write
 env:
   CARGO_TERM_COLOR: always
   BINARY_NAME: openshock-tui
-
 jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
         rust: [stable]
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             suffix: ""
-          - os: macos-latest
-            target: x86_64-apple-darwin
-            suffix: ""
-          - os: windows-latest
-            target: x86_64-pc-windows-msvc
-            suffix: ".exe"
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
@@ -59,7 +50,6 @@ jobs:
         with:
           name: ${{ env.BINARY_NAME }}-${{ matrix.target }}
           path: artifacts/${{ env.BINARY_NAME }}-${{ matrix.target }}${{ matrix.suffix }}
-
   release:
     needs: build
     if: github.ref == 'refs/tags/release'
