--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,6 +18,12 @@ jobs:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             suffix: ""
+          - os: macos-latest
+            target: x86_64-apple-darwin
+            suffix: ""
+          - os: macos-latest
+            target: aarch64-apple-darwin
+            suffix: ""
           - os: windows-latest
             target: x86_64-pc-windows-msvc
             suffix: ".exe"
@@ -65,4 +71,3 @@ jobs:
           path: src
           token: ${{secrets.CARGO_KEY}}
           dry-run: false
-          
